Made edits according to video tutorial
