# routes/index.js
@@ -1,10 +1,11 @@
 const router = require('express').Router();
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('../swagger.json');
 
-router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
-router.get('/', (req, res) => { res.send('Hello API World') });
+router.use('/', require('./swagger'));
+
+router.get('/', (req, res) => {
+  //#swagger.tags=['Hello World']
+  res.send('Hello API World')
+});
 router.use('/users', require('./users'));
 
 module.exports = router;
